Closed Bug 1587510 Opened 5 years ago Closed 4 years ago

TSan: data race on SystemGroupImpl::sSingleton on startup

Categories

(Core :: XPCOM, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox71 --- wontfix
firefox84 --- fixed

People

(Reporter: decoder, Assigned: Gankra)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

See attachment for more information. It looks like we are racing on a StaticPtr here during startup.

General information about TSan, data races, etc:

Typically, races reported by TSan are not false positives, but it is possible that the race is benign. Even in this case though, we should try to come up with a fix unless this would cause unacceptable performance issues. Also note that seemingly benign races can possibly be harmful (also depending on the compiler and the architecture) [1][2].

If the bug cannot be fixed, then a compile-time or runtime suppression needs to be added.

[1] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[2] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf

Doesn't show up in a try run anymore.

Depends on D94143

Assignee: nobody → a.beingessner
Status: NEW → ASSIGNED

It looks like SystemGroup was removed in bug 1620594.

Depends on: 1620594
Pushed by abeingessner@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e7663e6e9cd0 Remove supression for seemingly fixed issue. r=decoder
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: