Bug 1587510 - Remove supression for seemingly fixed issue. r=decoder

Doesn't show up in a try run anymore.

Differential Revision: https://phabricator.services.mozilla.com/D94144